Fix flickering of alpine js

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -137,3 +137,7 @@
   text-decoration: none;
   cursor: pointer;
 }
+
+[x-cloak] {
+  display: none;
+}
